--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -8,12 +8,12 @@ on:
 
 jobs:
   build:
-
     runs-on: macos-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Install fastlane
+        run: |
+          brew update
+          brew install fastlane
+      
