--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,9 +12,12 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+        
       - name: Install fastlane
         run: |
           brew update
           brew install fastlane
+          
+      - name: Run fastlane
           fastlane incrementpatch
       
