--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: Install fastlane
-        run: |
-          brew update
-          brew install fastlane
+      - name: Fastlane Action
+        uses: maierj/fastlane-action@v2.1.0
+        with:
+          lane: incrementpatch
       
