--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,4 +16,5 @@ jobs:
         uses: maierj/fastlane-action@v2.1.0
         with:
           lane: incrementpatch
+          subdirectory: 'ScreenJunkyz'
       
